--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
     "ts-node": "^9.1.1",
     "tsc-watch": "^4.2.9",
     "typedoc": "^0.20.35"
+  },
+  "dependencies": {
+    "inquirer": "^8.0.0",
+    "lowdb": "^1.0.0"
   }
 }
