--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "scripts": {
     "start": "tsc-watch --onSuccess \"node dist/index.js\"",
-    "test": "nyc mocha",
+    "test": "mocha",
     "coverage": "nyc npm test && nyc report --reporter=lcov",
-    "doc": "typedoc"
+    "doc": "typedoc; touch ./docs/.nojekyll"
   },
   "repository": {
     "type": "git",
